# lung-nodule-fusion-xai

./: .gitignore  README.md  TRAINING_PIPELINE_PLAN.md  configure_pylidc.py  configure_pylidc2.py  patch_pad.py  pyproject.toml  requirements.txt  requirements_nopr.txt  requirements_nopr2.txt  requirements_nopr3.txt  run_colab.ipynb  run_data_pipeline.py  run_local.sh  run_pipeline_detached.bat  run_training.bat  setup_env.bat  setup_env.ps1  setup_env.sh
artifacts/logs/: densenet121_fold0.csv  densenet121_fold1.csv  densenet121_fold2.csv  (+117 more)
configs/: config.yaml  radiomics_params.yaml  train.yaml
docs/: IMPLEMENTATION_PLAN_v2.md  PROMPT_DATASET_RESEARCH.md  RESEARCH_JOURNEY_REPORT_FILLED.md  training_guide.md
notebooks/: data_pipeline.ipynb  evaluation.ipynb  external_validation.ipynb  luna16_pipeline.ipynb  phase1_cnn_benchmark.ipynb  phase2_fusion.ipynb  radiomics_extraction.ipynb  segmentation.ipynb  track2_benchmark.ipynb  xai_analysis.ipynb
src/: stage_00_preprocess.py  stage_00b_negatives.py  stage_01_radiomics.py  stage_02_split.py  stage_03_train.py  stage_03b_fusion.py  stage_04_evaluate.py  stage_05_xai.py  stage_05b_shap.py  stage_05c_track1_sidebyside.py  stage_06_report.py  stage_07a_tables.py  stage_07b_fixed_samples.py  stage_07c_dataset_overview.py  stage_07d_grid_backbone.py  stage_07e_grid_cam_method.py  stage_07f_journey_report.py  stage_07g_fusion_diagram.py
src/utils/: io.py  (+2 more)
tests/: conftest.py  test_data_loading.py  test_efficiency.py  test_evaluation.py  test_models.py  test_preprocessing.py  test_segmentation.py  test_utils.py  test_xai.py
(+182 files in other folders)
